force-app/main/default/objects/User/fields/ccy_pairs_minipricers__c.field-meta.xml
<CustomField>
    <fullName>ccy_pairs_minipricers__c</fullName>
    <description>Visible / dashboard currency pairs.
(Default -&gt; Country settings)</description>
    <label>Currency Pairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR/USD</fullName>
            </value>
            <value>
                <fullName>USD/EUR</fullName>
            </value>
            <value>
                <fullName>EUR/GBP</fullName>
            </value>
            <value>
                <fullName>GBP/EUR</fullName>
            </value>
            <value>
                <fullName>USD/GBP</fullName>
            </value>
            <value>
                <fullName>GBP/USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>