force-app/main/default/objects/User/fields/Change_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Owner</label>
    <type>Checkbox</type>
</CustomField>