force-app/main/default/objects/User/fields/isDummyBackOfficeUser__c.field-meta.xml
<CustomField>
    <fullName>isDummyBackOfficeUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether the user is a back office dummy user, it will take part in the Login As functionality for Back Office users.</description>
    <label>Dummy Back Office User</label>
    <type>Checkbox</type>
</CustomField>