force-app/main/default/objects/User/fields/SNG_Signer_email__c.field-meta.xml
<CustomField>
    <fullName>SNG_Signer_email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signer email</label>
    <type>TextArea</type>
</CustomField>