force-app/main/default/objects/User/fields/USER_CHK_CashNexus__c.field-meta.xml
<CustomField>
    <fullName>USER_CHK_CashNexus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Nexus User</label>
    <type>Checkbox</type>
</CustomField>