force-app/main/default/objects/User/fields/USER_CHK_TermsConditions__c.field-meta.xml
<CustomField>
    <fullName>USER_CHK_TermsConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>