force-app/main/default/objects/User/fields/USER_CHK_welcomePack__c.field-meta.xml
<CustomField>
    <fullName>USER_CHK_welcomePack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Pack</label>
    <type>Checkbox</type>
</CustomField>