force-app/main/default/objects/User/fields/USER_country2__c.field-meta.xml
<CustomField>
    <fullName>USER_country2__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>