force-app/main/default/objects/User/fields/USER_country__c.field-meta.xml
<CustomField>
    <fullName>USER_country__c</fullName>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Name</valueSetName>
    </valueSet>
</CustomField>