force-app/main/default/objects/User/fields/User_DateFormat__c.field-meta.xml
<CustomField>
    <fullName>User_DateFormat__c</fullName>
    <description>Date format for the user</description>
    <inlineHelpText>Enter a date format.</inlineHelpText>
    <label>Date format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dd/MM/yyyy</fullName>
                <default>true</default>
                <label>dd/MM/yyyy</label>
            </value>
            <value>
                <fullName>MM/dd/yyyy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>