force-app/main/default/objects/User/fields/USER_FOR_TermsDate__c.field-meta.xml
<CustomField>
    <fullName>USER_FOR_TermsDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms Date</label>
    <type>DateTime</type>
</CustomField>