force-app/main/default/objects/User/fields/USER_LUP_parentBackOfficeUser__c.field-meta.xml
<CustomField>
    <fullName>USER_LUP_parentBackOfficeUser__c</fullName>
    <description>This lookup is used for the Login As functionality. It allows a back office user to have one, and only one, dummy user associated with it, to be able to login as a portal user.</description>
    <label>Parent Back Office User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>$Source.isDummyBackOfficeUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Support</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>USER_associatedDummyUser</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>