force-app/main/default/objects/User/fields/USER_NumberFormat__c.field-meta.xml
<CustomField>
    <fullName>USER_NumberFormat__c</fullName>
    <description>Number format of the user</description>
    <inlineHelpText>Enter a number format for the user.</inlineHelpText>
    <label>Number format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>###.###.###,##</fullName>
                <default>true</default>
                <label>###.###.###,##</label>
            </value>
            <value>
                <fullName>###,###,###.##</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>