force-app/main/default/objects/User/fields/USER_PCK_Language__c.field-meta.xml
<CustomField>
    <fullName>USER_PCK_Language__c</fullName>
    <description>Languages displayed in the My Settings section of the Community</description>
    <label>USER_PCK_Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>