force-app/main/default/objects/User/fields/USER_TXT_BIC__c.field-meta.xml
<CustomField>
    <fullName>USER_TXT_BIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>