force-app/main/default/objects/User/fields/USER_TXT_GlobalId__c.field-meta.xml
<CustomField>
    <fullName>USER_TXT_GlobalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Global Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>