force-app/main/default/objects/User/fields/USER_TXT_LocalUid__c.field-meta.xml
<CustomField>
    <fullName>USER_TXT_LocalUid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Local UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>