force-app/main/default/objects/User/fields/USER_TXT_Signer_email__c.field-meta.xml
<CustomField>
    <fullName>USER_TXT_Signer_email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signer email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>